--- a/recargas/src/main/resources/application.properties
+++ b/recargas/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=recargas
 spring.datasource.url=jdbc:mysql://localhost/telefonia
 spring.datasource.username=telefonia
 spring.datasource.password=telefonia
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 #Logging Properties
 logging.file.name=./logs/ejercicio.log
